feat(k8s): add prod namespace + initial app deployment & service

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,27 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: your-app-deployment
+  name: my-api-deployment
+  namespace: prod  
   labels:
-    app: your-app-deployment
+    app: my-api
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: your-app-deployment
+      app: my-api
   template:
     metadata:
       labels:
-        app: your-app-deployment
+        app: my-api
     spec:
       containers:
-      - name: app-container
-        image: <AWS_ACCOUNT_ID>.dkr.ecr.<YOUR_REGION>.amazonaws.com/<ECR_REPO>:${GITHUB_SHA}
-        ports:
-        - containerPort: 5000
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 5000
-          initialDelaySeconds: 5
-          periodSeconds: 5
+        - name: api-container
+          image: 311141543250.dkr.ecr.ap-southeast-2.amazonaws.com/app-repo:latest   
+          ports:
+            - containerPort: 5000
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 5
