--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: your-app-service
+  name: my-api-service
+  namespace: prod
 spec:
   type: LoadBalancer
   selector:
-    app: your-app-deployment
+    app: my-api
   ports:
     - protocol: TCP
       port: 80
