--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -21,25 +21,25 @@ jobs:
   build-deploy-heal:
     runs-on: ubuntu-latest
 
-    env:                # ⬅️ cluster‑specific vars (via secrets)
-      EKS_NS:  ${{ secrets.EKS_NAMESPACE  || 'default' }}
-      DEPLOY:  ${{ secrets.EKS_DEPLOYMENT_NAME }}
-      CTR:     ${{ secrets.EKS_CONTAINER_NAME }}
+    env:            # cluster‑specific values (secrets)
+      EKS_NS:   ${{ secrets.EKS_NAMESPACE }}          # may be empty → default later
+      DEPLOY:   ${{ secrets.EKS_DEPLOYMENT_NAME }}
+      CTR:      ${{ secrets.EKS_CONTAINER_NAME }}
 
     steps:
-    # ── checkout ────────────────────────────────────────────────
+    # ── checkout ───────────────────────────────────────────────
     - uses: actions/checkout@v3
 
-    # ── AWS creds via OIDC ──────────────────────────────────────
+    # ── AWS creds via OIDC ─────────────────────────────────────
     - uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
         aws-region:     ${{ env.AWS_DEFAULT_REGION }}
 
-    - run: aws sts get-caller-identity
-      name: Who am I?
+    - name: Who am I?
+      run: aws sts get-caller-identity
 
-    # ── Ensure ECR repos exist ─────────────────────────────────
+    # ── Ensure ECR repos exist ────────────────────────────────
     - name: Create ECR repos if missing
       run: |
         for repo in "$ECR_REPO" sklearn-inference ; do
@@ -47,16 +47,20 @@ jobs:
             || aws ecr create-repository --repository-name "$repo"
         done
 
-    # ── Build & push **APP** image ─────────────────────────────
+    # ── Build & push APP image ────────────────────────────────
     - name: Build & push APP image
       env: { DOCKER_BUILDKIT: 0 }
       run: |
         docker build --platform linux/amd64 -t $ECR_REPO:${{ github.sha }} ./app
-        docker tag $ECR_REPO:${{ github.sha }} \
+        docker tag  $ECR_REPO:${{ github.sha }} \
           $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
+
         aws ecr get-login-password --region $AWS_DEFAULT_REGION | \
-          docker login -u AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-        docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
+          docker login -u AWS --password-stdin \
+            $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+
+        docker push \
+          $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
 
     # ── Upload model artefact ─────────────────────────────────
     - name: Upload model.tar.gz to S3
@@ -70,18 +74,23 @@ jobs:
 
     - name: Configure kubeconfig
       run: |
-        aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name ${{ secrets.EKS_CLUSTER_NAME }}
+        aws eks update-kubeconfig \
+          --region $AWS_DEFAULT_REGION \
+          --name   ${{ secrets.EKS_CLUSTER_NAME }}
         kubectl get nodes
 
-    # ── (OPTIONAL) bootstrap namespace + skeleton deployment ——-
+    # ── Bootstrap namespace + skeleton deployment (if missing) ─
     - name: Bootstrap k8s objects (runs only if missing)
       run: |
         set -e
-        if ! kubectl get ns "$EKS_NS" >/dev/null 2>&1 ; then
-          kubectl create ns "$EKS_NS"
+        NS="${EKS_NS:-default}"
+
+        if ! kubectl get ns "$NS" >/dev/null 2>&1 ; then
+          kubectl create ns "$NS"
         fi
-        if ! kubectl get deploy "$DEPLOY" -n "$EKS_NS" >/dev/null 2>&1 ; then
-          cat <<EOF | kubectl apply -n "$EKS_NS" -f -
+
+        if ! kubectl get deploy "$DEPLOY" -n "$NS" >/dev/null 2>&1 ; then
+          cat <<EOF | kubectl apply -n "$NS" -f -
           apiVersion: apps/v1
           kind: Deployment
           metadata: { name: $DEPLOY }
@@ -94,18 +103,19 @@ jobs:
                 containers:
                   - name: $CTR
                     image: busybox
-                    command: [\"sh\",\"-c\",\"while true; do echo bootstrap; sleep 3600; done\"]
+                    command: ["sh","-c","while true; do echo bootstrap; sleep 3600; done"]
           EOF
         fi
 
-    # ── Deploy latest image ───────────────────────────────────
+    # ── Rollout new image ─────────────────────────────────────
     - name: Rollout new image
       env:
-        IMAGE_URI: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO:${{ github.sha }}
+        IMAGE_URI: "${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_DEFAULT_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}"
       run: |
-        echo "Updating $EKS_NS/$DEPLOY → $IMAGE_URI"
-        kubectl set image deployment/$DEPLOY $CTR=$IMAGE_URI -n $EKS_NS
-        kubectl rollout status deployment/$DEPLOY -n $EKS_NS --timeout=180s
+        NS="${EKS_NS:-default}"
+        echo "Updating $NS/$DEPLOY → $IMAGE_URI"
+        kubectl set image deployment/$DEPLOY $CTR=$IMAGE_URI -n $NS
+        kubectl rollout status deployment/$DEPLOY -n $NS --timeout=180s
 
     # ── Python env for predict + heal ─────────────────────────
     - uses: actions/setup-python@v4
@@ -115,19 +125,23 @@ jobs:
       if: ${{ hashFiles('requirements.txt') != '' }}
       run: pip install -r requirements.txt
 
+    # ── Predict failure probability ───────────────────────────
     - name: Predict failure probability
       id: predict
       run: |
-        prob=$(python ml_model/predict_failure.py --input-json '{"cpu":85,"memory":70,"errors":1}')
+        prob=$(python ml_model/predict_failure.py \
+          --input-json '{"cpu":85,"memory":70,"errors":1}')
         echo "fail_prob=$prob" >> $GITHUB_OUTPUT
         echo "Predicted fail_prob=$prob"
 
+    # ── Auto‑heal (conditional) ───────────────────────────────
     - name: Auto‑heal if prob ≥ 0.75
       if: ${{ fromJson(steps.predict.outputs.fail_prob) >= 0.75 }}
       env: { SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} }
       run: |
+        NS="${EKS_NS:-default}"
         python pipeline/scripts/smart_auto_heal.py \
-          --deployment $DEPLOY --namespace $EKS_NS --replicas 3
+          --deployment $DEPLOY --namespace $NS --replicas 3
         curl -X POST -H "Content-Type: application/json" \
           --data "{\"text\":\"🚑 Auto‑heal triggered (fail_prob=${{ steps.predict.outputs.fail_prob }}).\"}" \
           "$SLACK_WEBHOOK_URL"
