--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -10,12 +10,12 @@ permissions:
   contents: read
 
 env:
-  AWS_DEFAULT_REGION:  "${{ secrets.AWS_DEFAULT_REGION }}"
-  AWS_ACCOUNT_ID:      "${{ secrets.AWS_ACCOUNT_ID }}"
-  ECR_REPO:            "${{ secrets.ECR_REPO }}"
-  IMAGE_TAG:           "1.2-1-cpu-py3"
-  MODEL_IMAGE_URI:     "709825985650.dkr.ecr.ap-southeast-2.amazonaws.com/sagemaker-scikit-learn:1.2-1-cpu-py3"
-  MODEL_S3_PATH:       "${{ secrets.MODEL_S3_PATH }}"
+  AWS_DEFAULT_REGION: "${{ secrets.AWS_DEFAULT_REGION }}"
+  AWS_ACCOUNT_ID:     "${{ secrets.AWS_ACCOUNT_ID }}"
+  ECR_REPO:           "${{ secrets.ECR_REPO }}"
+  IMAGE_TAG:          "1.2-1-cpu-py3"
+  MODEL_IMAGE_URI:    "709825985650.dkr.ecr.ap-southeast-2.amazonaws.com/sagemaker-scikit-learn:1.2-1-cpu-py3"
+  MODEL_S3_PATH:      "${{ secrets.MODEL_S3_PATH }}"
 
 jobs:
   build-deploy-heal:
@@ -44,7 +44,8 @@ jobs:
         done
 
     - name: Build & push APP image
-      env: { DOCKER_BUILDKIT: 0 }
+      env:
+        DOCKER_BUILDKIT: 1   # 🚀 enable modern builder
       run: |
         docker build --platform linux/amd64 -t $ECR_REPO:${{ github.sha }} ./app
         docker tag  $ECR_REPO:${{ github.sha }} \
@@ -77,7 +78,8 @@ jobs:
         kubectl rollout status deployment/$DEPLOY -n $NS --timeout=180s
 
     - uses: actions/setup-python@v4
-      with: { python-version: '3.10' }
+      with:
+        python-version: '3.10'
 
     - name: Install Python deps
       if: "${{ hashFiles('requirements.txt') != '' }}"
@@ -89,12 +91,14 @@ jobs:
       run: |
         prob=$(python ml_model/predict_failure.py --plain --input-json \
           '{"build_time":250,"error_count":7,"cpu_usage":60,"test_pass_rate":0.70}')
+        echo "Predicted failure probability: $prob"  # 👀 visible in logs
         echo "fail_prob=$prob" >> $GITHUB_OUTPUT
     # ----------------------------------------------------------------
 
     - name: Auto‑heal if prob ≥ 0.75
-      if: "${{ fromJson(steps.predict.outputs.fail_prob) >= 0.75 }}"
-      env: { SLACK_WEBHOOK_URL: "${{ secrets.SLACK_WEBHOOK_URL }}" }
+      if: "${{ steps.predict.outputs.fail_prob != '' && fromJson(steps.predict.outputs.fail_prob) >= 0.75 }}"
+      env:
+        SLACK_WEBHOOK_URL: "${{ secrets.SLACK_WEBHOOK_URL }}"
       run: |
         python pipeline/scripts/smart_auto_heal.py --deployment $DEPLOY --namespace $NS --replicas 3
         curl -X POST -H 'Content-Type: application/json' \
