--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -83,23 +83,47 @@ jobs:
     - name: Install Python deps
       run: |
         if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi
-        # Ensure auto-heal dependencies
-        pip install requests
+        # ensure auto‑heal dependencies present during CI (keep idempotent)
+        pip install --quiet requests
 
-    # ---------- Predict step (numeric output via --plain) ----------
-    - name: Predict failure probability (TEST MODE)
-      id: predict
+    # ---------- collect runtime metrics ----------
+    - name: Collect build metrics
+      id: metrics
       run: |
-        prob=$(python ml_model/predict_failure.py --plain --input-json \
-          '{"build_time":250,"error_count":7,"cpu_usage":60,"test_pass_rate":0.70}')
-        echo "Predicted (real) probability: $prob"
+        start=$SECONDS
+        # For demo: we assume build/tests already ran; replace placeholders
+        build_time=$(( SECONDS - start ))
+        error_count=$(grep -c "ERROR" build.log 2>/dev/null || echo 0)
+        cpu_usage=60   # TODO: calculate real avg CPU if desired
+        test_pass_rate=0.85  # TODO: compute from test summary
+
+        metrics_json=$(jq -n \
+          --arg bt "$build_time" \
+          --arg ec "$error_count" \
+          --arg cu "$cpu_usage" \
+          --arg tpr "$test_pass_rate" \
+          '{build_time:($bt|tonumber),error_count:($ec|tonumber),cpu_usage:($cu|tonumber),test_pass_rate:($tpr|tonumber)}')
+
+        echo "Metrics → $metrics_json"
+        echo "json=$metrics_json" >> $GITHUB_OUTPUT
+
+    # ---------- Predict step ----------
+    - name: Predict failure probability
+      id: predict
+      env:
+        FORCE_FAIL_PROB: "${{ env.FORCE_FAIL_PROB }}"  # optional override for testing
+      run: |
+        prob=$(python ml_model/predict_failure.py --plain --input-json '${{ steps.metrics.outputs.json }}')
+        echo "Model probability: $prob"
+
+        # allow manual override for integration testing
+        if [[ -n "$FORCE_FAIL_PROB" ]]; then
+          echo "FORCE_FAIL_PROB provided → using $FORCE_FAIL_PROB"
+          prob=$FORCE_FAIL_PROB
+        fi
+
         echo "fail_prob=$prob" >> $GITHUB_OUTPUT
-        # ------------------------------------------------------------
-        # 🔥 FORCE HIGH VALUE FOR AUTO‑HEAL TEST
-        echo "Overriding fail_prob to 0.90 for test purposes"
-        echo "fail_prob=0.90" >> $GITHUB_OUTPUT
-        # TODO: Remove the two lines above after Auto‑Heal validation
-    # ----------------------------------------------------------------
+    # ----------------------------------
 
     - name: Auto‑heal if prob ≥ 0.75
       if: "${{ steps.predict.outputs.fail_prob != '' && fromJson(steps.predict.outputs.fail_prob) >= 0.75 }}"
